@@ -93,7 +93,13 @@ the XML file exported prior to V3.26 to allow it to be successfully imported in 
 <table>
 <tbody>
 <tr>
-<td align="center" width="100"><a href="nojs.html" onclick="BR(3435869);return false;">3430196</a></td>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3440318);return false;">3440318</a></td>
+<td>
+Filters can now be cleared by double-clicking on the filter indicator in
+the status bar. Also, Filter Menu correctly changed when a filter is active.</td>
+</tr>
+<tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3435869);return false;">3435869</a></td>
 <td>'-g config_file' option now accepts a non-existing file, creating it after notfying the user.</td>
 </tr>
 <tr>
